--- a/src/style.less
+++ b/src/style.less
@@ -17,20 +17,20 @@
     width: 100%;
     text-align: center;
   }
-  @keyframes flying {
-      0%{
-          margin-top: 100px;
-      }
-      50%{
-          margin-top: 10px;
-      }
-      75%{
-          margin-top: 50px;
-      }
-      100%{
-          margin-top: 100px;
-      }
-  }
+//   @keyframes flying {
+//       0%{
+//           margin-top: 100px;
+//       }
+//       50%{
+//           margin-top: 10px;
+//       }
+//       75%{
+//           margin-top: 50px;
+//       }
+//       100%{
+//           margin-top: 100px;
+//       }
+//   }
   .main {
     position: relative;
     width: 275px;
@@ -194,6 +194,14 @@
             top: 8px;
             border-radius: 50%;
           }
+        }
+        .middle{
+            width: 2px;
+            height: 12px;
+            background-color: #000;
+            position: absolute;
+            left: 50%;
+            top: 46%;
         }
         .mouth {
           width: 140px;
